# agent-router

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  build.rs
config/: agent-router.example.yaml
docs/: architecture.md
docs/adr/: 0001-router-runtime-boundary.md  0002-acp-first-backend-protocol.md  0003-default-active-executor-context.md  0004-machine-first-remote-execution.md
docs/superpowers/plans/: 2026-06-24-claude-code-executor.md
docs/superpowers/specs/: 2026-06-24-claude-code-executor-design.md
docs/workflows/: default-executor-auto-routing.md  message-interrupt-architecture.md  message-interrupt.md  orchestrator-initial-routing.md  remote-machines.md  session-executor-routing.md  session-persistence.md  slack-context-sync.md  slack-user-token-proxy.md  yolo-approval-mode.md
src/: approval.rs  config.rs  lib.rs  machine.rs  main.rs  router.rs  text.rs
src/channel/: context.rs  mod.rs  output.rs  qq.rs  slack.rs  web.rs
src/channel/slack/: context.rs
src/executor/: acp.rs  claude_stream_json.rs  codex_app_server.rs  mod.rs  pi_rpc.rs  registry.rs
src/router/: intake.rs  turns.rs
src/session/: context.rs  mod.rs  projection.rs  store.rs  work_queue.rs
tests/: fake_claude.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ChatContext.tsx  ChatThread.tsx  MarkdownText.tsx  api.ts  ndjson.test.ts  ndjson.ts  store.test.ts  store.ts  styles.css  types.ts
