[package]
name = "agent-router"
version = "0.1.0"
edition = "2024"
description = "Channel edge and session router for multi-agent handoff"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
axum = "0.8.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }
